# vibe-coders-map

./: .gitignore  README.md  dev.sh  eslint.config.mjs  package-lock.json  package.json  turbo.json
.github/workflows/: ci.yml  deploy-api.yml  deploy-web.yml  release-desktop.yml
apps/api/: package.json  tsconfig.json  vitest.config.ts  wrangler.toml
apps/api/migrations/: 0001_initial.sql  0002_anon_id.sql  0003_region_code.sql
apps/api/scripts/: test-local-pipeline.mjs
apps/api/src/: index.ts  ngeohash.d.ts  types.ts
apps/api/src/cron/: aggregate.ts
apps/api/src/lib/: admin1-lookup.ts
apps/api/src/middleware/: validate.ts
apps/api/src/routes/: choropleth.ts  clusters.ts  heartbeat.ts  stats.ts
apps/api/test/: admin1-lookup.test.ts  apply-migrations.ts  env.d.ts  pipeline.test.ts  seed-locations.json  tsconfig.json
apps/desktop/: .env.example  index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  ErrorBoundary.tsx  location.ts  logging.ts  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/macos/: location_bridge.m
apps/desktop/src-tauri/src/: main.rs  native_location.rs
apps/desktop/src/components/: Toggle.tsx  ToolCard.tsx  ToolLogoBadge.tsx
apps/web/: components.json  hero.ts  next.config.ts  package.json  tsconfig.tsbuildinfo
apps/web/public/geo/: admin1.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/lib/: api.ts  (+2 more)
(+16 files in other folders)
